; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/dnsapi/dnsapi/extr_query.c_DnsWToC.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/dnsapi/dnsapi/extr_query.c_DnsWToC.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CP_ACP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*)* @DnsWToC to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @DnsWToC(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %6 = load i32, i32* @CP_ACP, align 4
  %7 = load i32*, i32** %3, align 8
  %8 = call i32 @WideCharToMultiByte(i32 %6, i32 0, i32* %7, i32 -1, i32* null, i32 0, i32* null, i32 0)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = icmp eq i32 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  store i32* null, i32** %2, align 8
  br label %26

12:                                               ; preds = %1
  %13 = call i32 (...) @RtlGetProcessHeap()
  %14 = load i32, i32* %5, align 4
  %15 = call i32* @RtlAllocateHeap(i32 %13, i32 0, i32 %14)
  store i32* %15, i32** %4, align 8
  %16 = load i32*, i32** %4, align 8
  %17 = icmp eq i32* %16, null
  br i1 %17, label %18, label %19

18:                                               ; preds = %12
  store i32* null, i32** %2, align 8
  br label %26

19:                                               ; preds = %12
  %20 = load i32, i32* @CP_ACP, align 4
  %21 = load i32*, i32** %3, align 8
  %22 = load i32*, i32** %4, align 8
  %23 = load i32, i32* %5, align 4
  %24 = call i32 @WideCharToMultiByte(i32 %20, i32 0, i32* %21, i32 -1, i32* %22, i32 %23, i32* null, i32 0)
  %25 = load i32*, i32** %4, align 8
  store i32* %25, i32** %2, align 8
  br label %26

26:                                               ; preds = %19, %18, %11
  %27 = load i32*, i32** %2, align 8
  ret i32* %27
}

declare dso_local i32 @WideCharToMultiByte(i32, i32, i32*, i32, i32*, i32, i32*, i32) #1

declare dso_local i32* @RtlAllocateHeap(i32, i32, i32) #1

declare dso_local i32 @RtlGetProcessHeap(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
